[package]
name = "crusty-os"
version = "0.1.0"
edition = "2018"

[dependencies]
# compile kernel, then compile bootloader, finally link them together
# into a bootable image. Note: Cargo doesn't have post-build scripts
# use `cargo install bootimage` tool
bootloader = "0.9.23"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
volatile = "0.2.6"
