[package]
name = "crusty-os"
version = "0.1.0"
edition = "2018"

[dependencies]
# compile kernel, then compile bootloader, finally link them together
# into a bootable image. Note: Cargo doesn't have post-build scripts
# use `cargo install bootimage` tool
bootloader = "0.9.23"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.14.2"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none"
]
# remaps exit codes from qemu (via isa-debug-exit) to cargo
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300


[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false